[package]
name = "ds-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Pluggable STT engines for dontspeak: trait Stt + ClaudeNative (the Ctrl+G default) + Parakeet (local cache-aware streaming FastConformer over ort; macOS Core ML/ANE)."

[dependencies]
ds-config = { workspace = true }
ds-platform = { workspace = true }
ds-model = { workspace = true }

# ── Local cross-platform STT (the built-in `parakeet` engine) ───────────────
# Mic capture (cpal) → mono → 16 kHz (rubato) → cache-aware streaming FastConformer
# transducer (`ds-stt::streaming`) over the shared `ort` (load-dynamic) runtime.
# `transcribe-rs` is kept ONLY for its energy VAD (`EnergyVad`/`SmoothedVad` in
# boundary.rs); default-features=false drops its ONNX/ort inference path (we run ort
# directly), so it pulls no onnxruntime of its own.
transcribe-rs = { version = "0.3.11", default-features = false }
cpal = { workspace = true }
rubato = { workspace = true }

# Direct `ort` for the streaming STT runner and the speaker-SEPARATION session (SepFormer
# int8 ONNX). Same shared load-dynamic runtime Kokoro uses — no separate onnxruntime linked.
ort = { workspace = true }

# Diarization segments cross the shim's C ABI as JSON (see ds-stt::diarize).
serde = { workspace = true }
serde_json = { workspace = true }
kaldi-native-fbank = "0.1.0"

# ── Parakeet local STT (the `parakeet` engine, macOS Core ML / ANE) ──────────
# dlopen libsmkokoro.dylib (the FluidAudio Core ML / ANE shim) at runtime, like
# the apple-native TTS backend. Resolved via SMKOKORO_DYLIB_PATH.
[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.9"

[dev-dependencies]
# WAV reader for the `diarize_wav` example (manual on-device diarizer check).
hound = "3.5"

[lints]
workspace = true
